@@ -215,7 +215,7 @@ does-consume=This requirement gets consumed upon quest completion.
 
 [quest-title]
 ground-zero=Ground Zero
-biter-rammer=Biter Rammer (WIP)
+biter-rammer=Biter Rammer
 find-some-trades=Find Some Trades
 exploration=Exploration
 sprawling-base=Sprawling Base
@@ -262,7 +262,7 @@ concurrent-trades=Concurrent Trading
 
 [quest-condition-description]
 claimed-hexes=Claim a total of [font=__3__][color=__2__]__1__[.color][.font] hexes.
-biter-ramming=Destroy a [img=item.car] by ramming it into a [img=entity.biter-spawner] or [img=entity.spitter-spawner].
+biter-ramming=Destroy a [img=entity.biter-spawner] or [img=entity.spitter-spawner] by ramming it with a [img=item.car] or [img=item.tank].
 trades-found=Find [font=__3__][color=__2__]__1__[.color][.font] trades.
 hex-span=Claim hexes such that the longest distance between any two hexes is at least [font=__3__][color=__2__]__1__[.color][.font] hex tiles.
 coins-in-inventory=Put [font=__3__][color=__2__]__1__[.color][.font] in your inventory.
@@ -271,7 +271,7 @@ concurrent-trades=Actively make trades with [font=__3__][color=__2__]__1__[.colo
 
 [quest-reward-name]
 unlock-feature=Unlock Feature
-reduce-biters=Biter Snap (WIP)
+reduce-biters=Biter Snap
 receive-items=Receive Items
 claim-free-hexes=Claim Free Hexes
 
